# rs-sparcli

./: .gitignore  API.md  CHANGELOG.md  CLAUDE.md  CLEAN-UP.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  rustfmt.toml
.cargo/: config.toml
docs/: API.md  CLEAN-UP.md  DEVELOPMENT.md
examples/: output-readme.rs  output_dynamic.rs  output_gallery.rs  output_readme.rs  prompt-readme.rs  prompt_readme.rs  prompts.rs
src/: error.rs  lib.rs
src/core/: border.rs  command.rs  cursor.rs  geometry.rs  inplace.rs  markup.rs  mod.rs  private_file.rs  render.rs  style.rs  terminal.rs  text.rs  theme.rs  width.rs
src/core/style/: color.rs  hsl.rs  mod.rs
src/core/width/: line.rs  mod.rs
src/input/: confirm.rs  datepicker.rs  editor.rs  event.rs  field.rs  fuzzy.rs  guard.rs  history.rs  line_edit.rs  mod.rs  number.rs  password.rs  prompt.rs  select.rs  selection.rs  shortcut.rs  text.rs  textarea.rs  validate.rs
src/input/datepicker/: date.rs  mod.rs
src/input/number/: calc.rs  mod.rs
src/input/text/: keys.rs  mod.rs  render.rs  suggest.rs
src/output/: alert.rs  badge.rs  box_draw.rs  columns.rs  compose.rs  diff.rs  kv.rs  layout.rs  list.rs  live.rs  mod.rs  multiprogress.rs  pager.rs  panel.rs  progress.rs  rule.rs  spinner.rs  table.rs  tree.rs
src/output/card/: mod.rs  palette.rs  render.rs  rows.rs  style.rs
src/output/table/: column.rs  mod.rs  plan.rs  render.rs
tests/: integration.rs
